# bucket-of-utils

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/actions/setup-ci/: action.yml
.github/workflows/: ci.yml
bucket_of_utils/: __init__.py
bucket_of_utils/check_isp/: main.py
bucket_of_utils/panel_autogenerator/: __init__.py  _generate.py  _style.py  main.py
bucket_of_utils/pc_perf_tests/: .gitignore  .ruff.toml  main.py
bucket_of_utils/pdf/: add_title_to_first_page.html  index.py
bucket_of_utils/pdf/add_title_to_first_page/: index.html  index.py  pyscript.toml
bucket_of_utils/qr/: index.html  index.py  pyscript.toml  wifi.py
git_hooks/: prepare-commit-msg
src/bucket_of_utils/pdf/: add_title_to_first_page.html  add_title_to_first_page.py  index.py
tests/: test_check_isp.py
tests/panel_autogenerator/: test_generator.py  test_main.py
tests/pdf/: test_add_title_to_first_page.py
tests/qr/: test_wifi.py
